# portal_services

./: Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs  schema.rs
src/entities/: advert_interview.rs  candidate_result.rs  mod.rs
src/services/: mod.rs
src/services/interviews/: mod.rs  written.rs
