[package]
name = "portal_services"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "portal_services"
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"
diesel = { version = "2.2.0", features = ["mysql","chrono", "r2d2"] }
dotenvy = "0.15.7"
num_cpus = "1.16.0"
chrono = "0.4.39"
r2d2 = "0.8.10"
once_cell = "1.20.2"
pyo3 = "0.23.3"
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }
